--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,8 +103,9 @@ body {
 
 .partners-slider .row {
     display: flex;
-    animation: scroll 30s linear infinite;
+    animation: scroll 60s linear infinite;
     width: max-content;
+    gap: 50px;
 }
 
 @keyframes scroll {
@@ -112,7 +113,7 @@ body {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-50%);
+        transform: translateX(calc(-100% / 2));
     }
 }
 
